--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,18 @@ dev = [
 [tool.hatch.version]
 path = "src/pyverto/__about__.py"
 
+[tool.hatch.build]
+exclude = [
+  ".github",
+  "tests",
+  "*.yml",
+  "uv.lock",
+  ".python-version",
+  ".coverage",
+  "Dockerfile",
+  "entrypoint.sh",
+]
+
 [tool.hatch.envs.types]
 extra-dependencies = [
   "mypy>=1.0.0",
@@ -87,3 +99,9 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
