--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -13,7 +13,7 @@ jobs:
     name: Test install on 🐍
     uses: ./.github/workflows/test-install.yml
     with:
-      versions: '["3.10", "3.11", "3.12"]'
+      versions: '["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]'
       lint: true
       pytest: true
       artifact-name: "pytest-results"
