--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -13,7 +13,7 @@ jobs:
     if: ${{ startsWith(github.event.head_commit.message, 'Bump') || startsWith(github.event.head_commit.message, 'bump') }}
     uses: ./.github/workflows/test-install.yml
     with:
-      versions: '["3.10", "3.11", "3.12"]'
+      versions: '["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]'
       lint: true
       pytest: true
       artifact-name: "pytest-results"
