--- a/.github/workflows/test-install.yml
+++ b/.github/workflows/test-install.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Install 📦 and 👽️
         run: |
           python -m pip install --upgrade pip
-          python -m pip install .[dev]
+          python -m pip install ruff pytest pytest-cov
+          python -m pip install .
 
       - name: 🚨 with ruff
         if: ${{ inputs.lint }}
