--- a/.codecov.yml
+++ b/.codecov.yml
@@ -6,3 +6,10 @@ coverage:
         target: auto # default
         threshold: 0%
         base: auto 
+comment:
+  layout: " diff, flags, files"
+  behavior: default
+  require_changes: false  # if true: only post the comment if coverage changes
+  require_base: false
+  require_head: true
+  hide_project_coverage: false # if true: only show coverage on the git diff aka patch coverage
